--- a/alignment-and-centering/style.css
+++ b/alignment-and-centering/style.css
@@ -29,26 +29,37 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 
 /* We start writing out flexbox here. The above is just page setup */
+/* .container {
+  display: flex;
+  height: 100vh;
+  border: 10px solid red;
+  flex-direction: row-reverse; */
+  /* justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.box3 {
+  display: flex;
+  align-items: center;
+  height: 50vh;
+}
+
+.box1 {
+  font-size: 10rem;
+} */
+
 .container {
-  display:flex;
-  border:10px solid mistyrose;
-  height:100vh;
-  align-items:flex-start;
+  display: flex;
+  height: 100vh;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+  /* align-content: space-around; */
+  justify-content: center;
+  align-content: space-between;
 }
 
 .box {
-  width:33.333%;
-}
-
-.box2 {
-  padding-bottom: 200px;
-}
-
-.box6 {
-  padding-bottom: 0;
-}
-
-.box9 {
-  padding-bottom: 50px;
-  align-self:stretch;
+  width: 33.33%;
 }
