--- a/ordering/style.css
+++ b/ordering/style.css
@@ -31,16 +31,17 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 /* We start writing out flexbox here. The above is just page setup */
 .container {
   display:flex;
+  /* flex-direction: column; */
 }
 
 .box {
-  flex:1;
+  flex: 1;
 }
 
 .box3 {
-  order:1;
+  order: -11;
 }
 
-.box5 {
-  order:2;
+.box7 {
+  order: -2;
 }
